cluster/apps/download/radarr/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: download
  labels:
    routed-gateway: "true"
