cluster/apps/download/radarr/resources/deployment-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: download
  labels:
    app: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
      annotations:
        backup.velero.io/backup-volumes-excludes: download,media
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 7878
          livenessProbe:
            httpGet:
              path: /ping
              port: 7878
          resources:
            requests:
              cpu: 100m
              memory: 128M
            limits:
              memory: 1024M
          volumeMounts:
            - name: config
              mountPath: /config
            - name: old-config
              mountPath: /old-config
            - name: download
              mountPath: /download
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: old-config
          persistentVolumeClaim:
            claimName: radarr-old-config
        - name: download
          persistentVolumeClaim:
            claimName: radarr-download
        - name: media
          persistentVolumeClaim:
            claimName: radarr-media
