cluster/apps/download/radarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: download
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 7878
