cluster/apps/download/radarr/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-http
  namespace: download
spec:
  hostnames:
    - radarr.btkostner.network
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: radarr
          port: 80
